--- a/CyScada.Web.csproj
+++ b/CyScada.Web.csproj
@@ -48,6 +48,14 @@
       <HintPath>DLL\IODriver.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="OpcNetApi, Version=2.0.2.0, Culture=neutral, PublicKeyToken=78aea80f6827b5ab, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>DLL\OpcNetApi.dll</HintPath>
+    </Reference>
+    <Reference Include="OpcNetApi.Com, Version=2.0.1.0, Culture=neutral, PublicKeyToken=78aea80f6827b5ab, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>DLL\OpcNetApi.Com.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -120,6 +128,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common\CommonUtil.cs" />
     <Compile Include="Common\LoginCheckAttribute.cs" />
     <Compile Include="Controllers\AuthorityAssignController.cs" />
     <Compile Include="Controllers\AuthorityController.cs" />
@@ -144,7 +153,8 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModel.cs" />
-    <Compile Include="OpcClient\OpcClient.cs" />
+    <Compile Include="OpcClient\IOClient.cs" />
+    <Compile Include="OpcClient\IOClientOPC.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebApi\ApiAuthAttribute.cs" />
     <Compile Include="WebApi\Controllers\AuthorityAssignController.cs" />
@@ -274,8 +284,10 @@
     <Content Include="css\SuperAdmin\lightbox.css" />
     <Content Include="css\SuperAdmin\media-player.css" />
     <Content Include="css\SuperAdmin\style.css" />
-    <Content Include="DLL\IOClient.dll" />
-    <Content Include="DLL\IODriver.dll" />
+    <Content Include="DLL\OpcNetApi.Com.dll" />
+    <Content Include="DLL\OpcNetApi.Com.xml" />
+    <Content Include="DLL\OpcNetApi.dll" />
+    <Content Include="DLL\OpcNetApi.xml" />
     <Content Include="fonts\codropsicons\codropsicons.svg" />
     <Content Include="fonts\codropsicons\license.txt" />
     <Content Include="fonts\fontawesome-webfont.svg" />
